# Lightning

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  environment.devenv.yml  pytest.ini  tasks.py
.github/workflows/: gh-pages.yml  python-package-conda.yml
bindings/: CMakeLists.txt  domain.cpp
core/: CMakeLists.txt  Domain.cpp  Domain.hpp  DomainParameters.hpp  ElectricCharge.hpp  Lightning.hpp  Utils.hpp
docs/: doxyfile
graphics/: CMakeLists.txt  Colors.hpp  Graphics.cpp  Graphics.hpp  Renderable.hpp  Renderer.cpp  Window.hpp
html/: DomainParameters_8hpp_source.html  Domain_8hpp_source.html  ElectricCharge_8hpp_source.html  ElectricField_8hpp_source.html  Graphics_8hpp_source.html  Lightning_8hpp_source.html  PathPoint_8hpp_source.html  PhysicsUtils_8hpp_source.html  Renderable_8hpp_source.html  Renderer_8hpp_source.html  Window_8hpp_source.html  annotated.html  classDomain-members.html  classDomain.html  classLightning-members.html  classLightning.html  classPathPoint-members.html  classPathPoint.html  classes.html  classgraphics_1_1Field-members.html  classgraphics_1_1Field.html  classgraphics_1_1Line-members.html  classgraphics_1_1Line.html  classgraphics_1_1Pixel-members.html  classgraphics_1_1Pixel.html  classgraphics_1_1Renderable-members.html  classgraphics_1_1Renderable.html  classgraphics_1_1Renderer-members.html  classgraphics_1_1Renderer.html  classgraphics_1_1Window-members.html  classgraphics_1_1Window.html  classphysics_1_1ElectricField-members.html  classphysics_1_1ElectricField.html  classtest__classes_1_1classes_1_1Test-members.html  classtest__classes_1_1classes_1_1Test.html  classtest__classes_1_1classes_1_1UnitTest-members.html  classtest__classes_1_1classes_1_1UnitTest.html  dir_141148b54b6933c18404c011c8bba79c.html  dir_29d2ad118978bc3ca2af8fdb6961b7f0.html  dir_36caf980ed5a50aee9bf8a455e55ec76.html  (+19 more)
html/search/: all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_a.js  classes_0.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  searchdata.js
libs/graphics/: CMakeLists.txt  Colors.hpp  Graphics.cpp  Graphics.hpp  Renderable.cpp  Renderable.hpp  Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp  Window.hpp.orig
libs/physics/: CMakeLists.txt  Constants.hpp  DomainParameters.hpp  ElectricCharge.hpp  ElectricField.hpp  PhysicsUtils.hpp  Utils.hpp
src/: Domain.hpp  Lightning.hpp  PathPoint.cpp  PathPoint.hpp  gui copy.cpp  gui.cpp  main.cpp  main.cpp.orig
tests/: CMakeLists.txt  tests.py
tests/case_tests/: test_electric_field.py  test_ray_generation.py
tests/case_tests/inputs/: 1_positive_1_negative.light  2_positive.light  2_positive_1_negative.light
tests/test_classes/: classes.py
tests/tmp/: test_electric_potential_field_current
tests/unit_tests/: CMakeLists.txt  test.cpp  test_physics.cpp  test_units.py
